# LMPTS

./: .gitignore  ADMIN_GUIDE.md  ALGORITHMS.md  ANALYST_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETE_PROJECT_GUIDE.md  CONTRIBUTING.md  DATABASE.md  DESIGN_PATTERNS.md  INSTALLATION.md  INSTRUCTOR_GUIDE.md  LEARNER_GUIDE.md  LICENSE  PROJECT_AUDIT.md  README.md  ROADMAP.md  TESTING.md  TEST_REPORT.md  USER_GUIDE.md  main.py  pyproject.toml  requirements.txt
docs/: DOMAIN_MODEL.md  EDGE_CASES.md  ERROR_HANDLING.md  FUTURE_IMPROVEMENTS.md  LIMITATIONS.md  OOP_USAGE.md  PROJECT_OVERVIEW.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
lmpts/: __init__.py
lmpts/core/: __init__.py  algorithms.py  enums.py  exceptions.py  models.py  patterns.py
lmpts/data/: __init__.py  database.py  repository.py
lmpts/data/migrations/: 001_initial_schema.sql
lmpts/gui/: __init__.py  controllers.py  main_window.py
lmpts/services/: __init__.py  analytics_service.py  container.py  course_service.py  enrollment_service.py  learner_service.py  learning_path_service.py
lmpts/utils/: logging_config.py
tests/: __init__.py  conftest.py  test_algorithms.py  test_database.py  test_edge_cases.py  test_integration.py  test_models.py  test_patterns.py  test_repositories.py  test_services.py
